
- Bigas: Das Bild linkt jetzt zum Bearbeiten. Zum Bild kommt man mit dem
  Extralink »Bild zeigen«.
- Bigas: Die Bildunterschriften in den <image>- und <thumbnail>-Tags wurden
  auch nach dem »Synchronisieren« nicht aktualisiert. Unberührt bleibt hiervon
  das <caption>-Tag. (Bug #4530)
- Biga: Neues Layout »hidden« für die Bilder. Dies erlaubt das Ausblenden von
  nicht benötigten Bildern.
 	

1.3 (2008-11-17)
----------------

- WYSIWYG-Editor: Formular für das Hinzufügen und Bearbeiten von Videos;
  unterstützen des <video>-Tags incl. expires-Attribut.
- WYSIWYG-Editor: Aktion für das Hinzufügen eines Mail-Formulars.
- Lightbox-Formulare: Nach dem ersten Submit wurden die Handler nicht
  aufgesetzt, so dass ein zweiter Submit nicht (korrekt) funktionierte.
  Unterstütung für Checkboxen.
- Massenänderung der Copyrights aller Bilder in einem Ordner.
- Bei Verlinkungen (z.B. Assets) wird jetzt ein größerer Tooltip angezeigt
  (beil Bildern auch mit Bild).


1.2.7 (2008-11-10)
------------------

- Übersetzungen korrigiert.

1.2.6 (2008-11-10)
------------------

- Syndizieren mit gleichzeitigem verstecken auf der Homepage (bug #4521).

1.2.5 (2008-10-29)
------------------

- Keywords werden alle 5 Minuten neu geladen (Bug #4501).
- SEO aus dem Kern entfernt.

1.2.4 (2008-10-24)
------------------

- Bei Link-Objekten kann jetzt »Neues Fenster« als Ziel ausgewählt werden (bug
  #4488).
- Beim Auschecken und Einchecken bleiben die Views stabil, d.h. wenn man sich
  z.B. die Assets anguckt und auscheckt, kann man danach direkt die Assets
  bearbeiten (bug #4357).
- Beim »Synchronisieren« des Bilderordners einer Galerie werden die Thumbnails
  neu erzeugt (bug #4496).
- Channels: Kein »Anzeigen«-Tab mehr bei ausgecheckten Channels; kein
  »Entfernen« mehr auf dem Anzeigen-Tab; die Checkboxen sind nicht mehr
  anclickbar (bug #4114).
- Channels: Checkbox um layout="big" einzustellen.
- Channels: Checkbox um Relateds zu verstecken (bug #4492).