@@ -4,7 +4,7 @@
 
 import urlparse
 import urllib2
-import sha
+import time
 
 import zope.cachedescriptors.property
 import zope.component
@@ -41,37 +41,22 @@ class WorkingcopyPreview(zeit.cms.browser.preview.Preview):
         return url
 
     def get_preview_object(self):
-        cms_config = zope.app.appsetup.product.getProductConfiguration(
-            'zeit.cms')
-        base = cms_config['workingcopy-preview-base']
-
-        # Make sure the base folder exists
-        parsed_base = urlparse.urlparse(base)
-        base_path = parsed_base[2]
-        target_folder = self.repository
-        for next_name in base_path.split('/'):
-            if not next_name:
-                # Ignore empty parts (i.e. start end end)
-                continue
-            if next_name not in target_folder:
-                target_folder[next_name] = zeit.cms.repository.folder.Folder()
-            target_folder = target_folder[next_name]
-
         # create a copy and remove unique id
         content = zeit.cms.interfaces.ICMSContent(
             zeit.connector.interfaces.IResource(self.context))
         unique_id = content.uniqueId
         content.uniqueId = None
 
-        temp_id = self.get_temp_id(unique_id)
+        target_folder = self.repository.getContent(
+            self.context.uniqueId).__parent__
+
+        temp_id = self.get_temp_id(self.context.__name__)
         target_folder[temp_id] = content
         return content
 
-    def get_temp_id(self, unique_id):
-        temp_id = sha.new(unique_id)
-        temp_id.update(self.request.principal.id)
-        temp_id = temp_id.hexdigest()
-        return temp_id
+    def get_temp_id(self, name):
+        return 'preview-%s-%s' % (
+            self.request.principal.id, name)
 
     @zope.cachedescriptors.property.Lazy
     def repository(self):
