@@ -11,6 +11,9 @@ zeit.cms changes
   das <caption>-Tag. (Bug #4530)
 - Biga: Neues Layout »hidden« für die Bilder. Dies erlaubt das Ausblenden von
   nicht benötigten Bildern.
+- Previews von ausgecheckten Dokumenten werden jetzt im Verzeichnis des
+  Ursprungsobjekts erzeugt. Damit können contextabhängige Styles angesehen
+  werden (v.a. Zuender). (Bug #4311)
  	
 
 1.3 (2008-11-17)
